[package]
name = "HeapUnderFlow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
log = "0.4.33"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "uuid",
] }
tokio = { version = "1.52.3", features = ["full"] }
